# rust_play_aws_ses

./: Cargo.toml  README.md
src/: main.rs
