[package]
name = "rust_play_aws_s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
dotenv = "0.15.0"

# File
tokio-stream = "0.1.9"
mime_guess = "2.0.4"

# AWS
aws-config = "0.48.0"
aws-sdk-sesv2 = "0.18.0"

# Testing
anyhow = "1.0.65"